; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-request.c_strsep_char.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-request.c_strsep_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*, i8)* @strsep_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @strsep_char(i8* %0, i8* %1, i8 signext %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8 %2, i8* %7, align 1
  %9 = load i8*, i8** %5, align 8
  %10 = icmp ne i8* %9, null
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i64 @UNLIKELY(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %39

16:                                               ; preds = %3
  %17 = load i8*, i8** %5, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = icmp ugt i8* %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i64 @UNLIKELY(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %16
  store i8* null, i8** %4, align 8
  br label %39

24:                                               ; preds = %16
  %25 = load i8*, i8** %5, align 8
  %26 = load i8, i8* %7, align 1
  %27 = call i8* @strchr(i8* %25, i8 signext %26)
  store i8* %27, i8** %8, align 8
  %28 = load i8*, i8** %8, align 8
  %29 = icmp ne i8* %28, null
  %30 = xor i1 %29, true
  %31 = zext i1 %30 to i32
  %32 = call i64 @UNLIKELY(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %24
  store i8* null, i8** %4, align 8
  br label %39

35:                                               ; preds = %24
  %36 = load i8*, i8** %8, align 8
  store i8 0, i8* %36, align 1
  %37 = load i8*, i8** %8, align 8
  %38 = getelementptr inbounds i8, i8* %37, i64 1
  store i8* %38, i8** %4, align 8
  br label %39

39:                                               ; preds = %35, %34, %23, %15
  %40 = load i8*, i8** %4, align 8
  ret i8* %40
}

declare dso_local i64 @UNLIKELY(i32) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
